# tape-sorter

./: CMakeLists.txt  README.md  config.cpp  config.h  config.txt  main.cpp  sorter.cpp  sorter.h  tape.cpp  tape.h
src/: config.cpp  config.h  main.cpp  sorter.cpp  sorter.h  tape_abstract.h  tape_fabric.cpp  tape_fabric.h  tape_fabric_abstract.h  tape_file.cpp  tape_file.h
test/: test.cpp
